[gd_scene load_steps=6 format=3 uid="uid://bhmpwquspkghd"]

[ext_resource type="Script" path="res://PauseScreen.gd" id="1_1j0oy"]
[ext_resource type="Texture2D" uid="uid://nna4iwlvosuh" path="res://themes/textures/bg1.jpg" id="2_riust"]
[ext_resource type="StyleBox" uid="uid://dk7ly84b34ua2" path="res://themes/panels/wooden_border_empty.tres" id="3_gqjee"]
[ext_resource type="FontFile" uid="uid://cnitqn7vm8ef3" path="res://fonts/PublicPixel.ttf" id="4_6dqj2"]
[ext_resource type="StyleBox" uid="uid://bigslfu0pws52" path="res://themes/panels/paper_panel.tres" id="5_6t5sx"]

[node name="PauseScreen" type="CanvasLayer"]
script = ExtResource("1_1j0oy")

[node name="PauseMenu" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_riust")
stretch_mode = 1

[node name="Panel2" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_left = 640.0
offset_top = 163.0
offset_right = 1285.0
offset_bottom = 934.0
color = Color(0.756863, 0.678431, 0.635294, 1)

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -400.0
offset_right = 335.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_gqjee")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6dqj2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_6t5sx")
theme_override_styles/hover = ExtResource("5_6t5sx")
theme_override_styles/pressed = ExtResource("5_6t5sx")
theme_override_styles/focus = ExtResource("5_6t5sx")
text = "RESUME GAME"

[node name="Save" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6dqj2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_6t5sx")
theme_override_styles/hover = ExtResource("5_6t5sx")
theme_override_styles/pressed = ExtResource("5_6t5sx")
theme_override_styles/focus = ExtResource("5_6t5sx")
text = "SAVE GAME"

[node name="PQuit" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6dqj2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_6t5sx")
theme_override_styles/hover = ExtResource("5_6t5sx")
theme_override_styles/pressed = ExtResource("5_6t5sx")
theme_override_styles/focus = ExtResource("5_6t5sx")
text = "QUIT GAME"

[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/PQuit" to="." method="_on_p_quit_pressed"]
